# HPC-MPI-OpenMP

./: .gitignore  Makefile  Readme.md  autores.txt  chunksizeMetrics.ipynb  compileProjects.sh  generateInputFiles.sh  graphics.ipynb  obtainData.sh  pruebas_chunk.sh  runTest.sh  times.csv
CAP2024/: contrast.cpp
MPI/: contrast-enhancement.cpp  contrast.cpp  hist-equ.h  histogram-equalization.cpp
MPI+OpenMP/: CMakeLists.txt  contrast-enhancement.cpp  contrast.cpp  histogram-equalization.cpp
OpenMP/: CMakeLists.txt  contrast-enhancement.cpp  contrast.cpp  histogram-equalization.cpp
Sequential/: CMakeLists.txt  contrast.cpp
data/: time_OpenMP_G.csv  time_OpenMP_HSL.csv  time_OpenMP_YUV.csv
data/MPI/: joinData.py  joinedData.csv  mpi.csv
data/MPI+OpenMP/: joinData.py  joinedData.csv  mpi-openmp.csv
data/MPI+OpenMP/Node_1/: output_p1_threads16_1.csv  output_p1_threads16_2.csv  output_p1_threads16_3.csv  output_p1_threads16_4.csv  output_p1_threads16_5.csv  output_p1_threads1_1.csv  output_p1_threads1_2.csv  output_p1_threads1_3.csv  output_p1_threads1_4.csv  output_p1_threads1_5.csv  output_p1_threads2_1.csv  output_p1_threads2_2.csv  output_p1_threads2_3.csv  output_p1_threads2_4.csv  output_p1_threads2_5.csv  output_p1_threads4_1.csv  output_p1_threads4_2.csv  output_p1_threads4_3.csv  output_p1_threads4_4.csv  output_p1_threads4_5.csv  output_p1_threads8_1.csv  output_p1_threads8_2.csv  output_p1_threads8_3.csv  (+77 more)
data/OpenMP/: joinData.py  joinedData.csv  openMP.csv
data/Sequential/: joinData.py  joinedData.csv  sequential.csv
results_assets/tables/: speedup.csv  speedup_data.csv
(+234 files in other folders)
